# neon-os

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: project-map.yaml
.claude/agents/: engineering-manager.md  product-owner.md  project-manager.md  validator.md
.claude/skills/triage/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: branch-name.yml  ci.yml
apps/docs/: astro.config.mjs  package.json
apps/docs/src/content/docs/: architecture.md  cli.md  index.md  schema.md
crates/neon/: Cargo.toml  pantry.toml
crates/neon-db/: Cargo.toml
crates/neon-db/migrations/: 0001_initial_schema.sql
crates/neon-db/src/: lib.rs
crates/neon-db/src/entities/: config_entry.rs  memory_entry.rs  mod.rs  project.rs
crates/neon/examples/: widget_preview.rs
crates/neon/src/: doctor.rs  install.rs  lib.rs  main.rs  repo.rs  setup.rs
crates/neon/src/doctor/: widgets.rs
crates/neon/src/setup/: common.rs  diagnostics.rs  docker.rs  git_identity.rs  languages.rs  npm_token.rs  packages.rs  profile.rs  secrets.rs  terminal_theme.rs
crates/neon/themes/: synthwave84.yml
crates/starbase-db/: Cargo.toml
docs/adr/: 0001-use-hybrid-turborepo-cargo-workspace.md  0002-open-source-from-start.md  0003-cross-platform-setup-tui.md  0004-interactive-cli-clap-interactive-clap-inquire.md
docs/architecture/: overview.md  repo-setup-automation.md  setup-tui.md
docs/product/: vision.md
templates/: README.md
