[workspace]
resolver = "2"
members = [
  "crates/stub-crate",
  "crates/neon"
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/neonwave-dev/neon-os"
homepage = "https://github.com/neonwave-dev/neon-os"
documentation = "https://github.com/neonwave-dev/neon-os"
readme = "README.md"

[workspace.dependencies]
