[package]
name = "neon-cli"
version = "0.1.0"
edition = "2021"
description = "NeonOS CLI - developer environment diagnostics and tooling"
license = "MIT"

[[bin]]
name = "neon"
path = "src/main.rs"

[lib]
name = "neon_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
ratatui = "0.30.1"
crossterm = "0.29.0"
anyhow = "1.0"
tui-pantry = { version = "0.4", optional = true }

[features]
pantry = ["dep:tui-pantry"]
