[package]
name = "neon-cli"
version = "0.1.0"
edition = "2021"
description = "NeonOS CLI - developer environment diagnostics and tooling"
license = "MIT"

[[bin]]
name = "neon"
path = "src/main.rs"

[lib]
name = "neon_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
ratatui = "0.30.1"
crossterm = "0.29.0"
anyhow = "1.0"
dirs = "6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
json_comments = "0.2"
toml = "1.0"
inquire = "0.9"
tui-pantry = { version = "0.4", optional = true }

[features]
pantry = ["dep:tui-pantry"]
